Fix missing data and layout of box B and D

--- a/public/boxBStylesheet.css
+++ b/public/boxBStylesheet.css
@@ -21,7 +21,7 @@
     display: grid;
     gap: 0.5em  1em;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr) 3fr repeat(3, 1fr) 3fr 6fr minmax(0, 2.3fr) 1fr;
+    grid-template-rows: repeat(2, 1fr) 2fr 1fr 3fr repeat(2, 1fr) 2fr 3fr 6fr minmax(0, 2.3fr) 1fr;
 }
 
 
@@ -122,7 +122,7 @@
 }
 
 .buttonContainer > button {
-    width: 30%;
+    width: 6em;
     margin: 0.5em 0 0 0.5em;
     float: right;
 }
@@ -132,4 +132,9 @@
     overflow-y: auto;
     flex-grow: 1;
     border: solid black 1px;
+}
+
+#comment_editable {
+    word-break: break-word;
+    overflow-y: auto;
 }
